--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "scripts": "gulp scripts",
     "typings": "typings",
     "lite": "lite-server",
-    "postinstall": "typings install && npm run build && npm run lite"
+    "postinstall": "typings install && npm run build"
   },
   "license": "private",
   "dependencies": {
